--- a/televisionfilter.html
+++ b/televisionfilter.html
@@ -255,10 +255,90 @@
                        </ul>
                 </div>
             </div>
-            <div class="filert_tech"></div>
-            <div class="filter_dtype"></div>
-            <div class="filter_ss"></div>
-            <div class="filter_USB"></div>
+            <div class="filter_tech">
+                <div class="click_tech">
+                    <h4 class="filter_common_title">Display Technology</h4>
+                    <img src="./televisionImg/expand_more_black_24dp.svg" class="tech_down">
+                </div>
+                <div class="tech_view">
+                    <ul class ="filter_list">
+                        <li>
+                            <input type="checkbox" value="QLED" class="filter_checkbox" />
+                            <p>QLED</p>
+                        </li>
+                        <li>
+                            <input type="checkbox" value="OLED" class="filter_checkbox" />
+                            <p>OLED</p>
+                        </li>
+                        <li>
+                            <input type="checkbox" value="Nanocell" class="filter_checkbox" />
+                            <p>Nanocell</p>
+                        </li>
+                       </ul>
+                </div>
+            </div>
+            <div class="filter_dtype">
+                <div class="click_dtype">
+                    <h4 class="filter_common_title">Display Type</h4>
+                    <img src="./televisionImg/expand_more_black_24dp.svg" class="dtype_down">
+                </div>
+                <div class="dtype_view">
+                    <ul class ="filter_list">
+                        <li>
+                            <input type="checkbox" value="UltraHD(8K)" class="filter_checkbox" />
+                            <p>Ultra HD (8K)</p>
+                        </li>
+                        <li>
+                            <input type="checkbox" value="UltraHD(4K)" class="filter_checkbox" />
+                            <p>Ultra HD (4K)</p>
+                        </li>
+                        <li>
+                            <input type="checkbox" value="HDReady" class="filter_checkbox" />
+                            <p>HD Ready</p>
+                        </li>
+                        <li>
+                            <input type="checkbox" value="FullHD" class="filter_checkbox" />
+                            <p>Full HD</p>
+                        </li>
+                       </ul>
+                       <p class="seemore_dtype">See more</p>
+                </div>
+                <div class="hidden_dtype">
+                    <ul class ="filter_list">
+                        <li>
+                            <input type="checkbox" value="HD" class="filter_checkbox" />
+                            <p>HD</p>
+                        </li>
+                    </ul>
+                 <p class="seeless_dtype">See less</p>
+                </div>
+            </div>
+                <div class="filter_size">
+                    <div class="click_size">
+                        <h4 class="filter_common_title">Screen Size (Diagonal)</h4>
+                        <img src="./televisionImg/expand_more_black_24dp.svg" class="size_down">
+                    </div>
+                    <div class="size_view">
+                        <ul class ="filter_list">
+                            <li>
+                                <input type="checkbox" value="190cm" class="filter_checkbox" />
+                                <p>190 cm (75 inch)</p>
+                            </li>
+                            <li>
+                                <input type="checkbox" value="189cm" class="filter_checkbox" />
+                                <p>189 cm (75 inch)</p>
+                            </li>
+                            <li>
+                                <input type="checkbox" value="178cm" class="filter_checkbox" />
+                                <p>178 cm (70 inch)</p>
+                            </li>
+                            <li>
+                                <input type="checkbox" value="177.8cm" class="filter_checkbox" />
+                                <p>177.8 cm (70 inch)</p>
+                            </li>
+                           </ul>
+                    </div>
+            </div>
          </div>
          <div class ="tel_allshow_detail">
             <div class="tel_allshow_uppar">
