--- a/pages/login_signup.html
+++ b/pages/login_signup.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../CSS/navbaar.css">
     <link rel="icon" type="image/x-icon" href="https://www.reliancedigital.in//build/client/images/apple-touch-icon.png">
     <link rel="stylesheet" href="../CSS/signup.css">
+    <link rel="stylesheet" href="../CSS/footer.css">
     <script src="https://kit.fontawesome.com/eaafce657d.js" crossorigin="anonymous"></script>
     <title>Login or Register to shop online with Reliance Digital</title>
 </head>
@@ -25,13 +26,13 @@
                 </div>
                 <hr>
                 <div id="main_signup_login_input_param">
-                  <div class="input_animation bs6">
+                  <div id="inter_your_otp_lable" class="input_animation bs6">
                     <input class="bs6 animationInpu" id="login_otp_button_div_input" type="number" placeholder=" ">
-                    <label for="" class="animation_lable">Enter OTP</label>
+                    <label  for="" class="animation_lable">Enter OTP</label>
                   </div>
                     <div class="input_animation">
                       <input class="animationInpu" id="login_signup_input_number" type="number" placeholder=" ">
-                      <label for="" class="animation_lable">Enter Mobile Number</label>
+                      <label id="Enter_your_mobile_lable" for="" class="animation_lable">Enter Mobile Number</label>
                     </div>
                     <button id="check_login_availble_button">PROCEED</button>
                     <button class="bs6" id="login_otp_button_div">SUBMIT OTP</button>
@@ -60,6 +61,8 @@
           </div> 
        </div>
      </div>
+     <div id="hp13">
+    </div>
 </body>
 </html>
 <script type="module" src="../scripts/signup.js"></script>
