--- a/pages/user_order.html
+++ b/pages/user_order.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/x-icon" href="https://www.reliancedigital.in//build/client/images/apple-touch-icon.png">
     <link rel="stylesheet" href="../CSS/navbaar.css">
     <link rel="stylesheet" href="../CSS/user_order.css">
+    <link rel="stylesheet" href="../CSS/footer.css">
     <title>Online Electronic Shopping Store in India - Reliance Digital</title>
 </head>
 <body>
@@ -46,7 +47,7 @@
                 </h3>
                 <ul class="profilee_list">
                     <li>
-                        <a href="#">MY Profile</a>
+                        <a href="user_profile.html">MY Profile</a>
                     </li>
                     <li>
                         <a id="MY_oder_location" href="user_order.html">My Order</a>
@@ -64,7 +65,7 @@
                         <a href="#">My Credit</a>
                     </li>
                 </ul>
-                <h3 class="text_size_fix">
+                <h3 id="logout_btn" class="text_size_fix">
                     <a href="#">
                         <i class="fa-solid fa-right-from-bracket"></i>
                         Logout
@@ -83,6 +84,8 @@
                  </div>
             </div>
          </div>
+    </div>
+    <div id="hp13">
     </div>   
 </body>
 </html>
