--- a/pages/user_profile.html
+++ b/pages/user_profile.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../CSS/user_profile.css">
     <link rel="icon" type="image/x-icon" href="https://www.reliancedigital.in//build/client/images/apple-touch-icon.png">
     <link rel="stylesheet" href="../CSS/navbaar.css">
+    <link rel="stylesheet" href="../CSS/footer.css">
     <title>Online Electronic Shopping Store in India - Reliance Digital</title>
     <style>
        
@@ -48,7 +49,7 @@
                 </h3>
                 <ul class="profilee_list">
                     <li>
-                        <a href="#">MY Profile</a>
+                        <a id="my_profile_bold" href="#">MY Profile</a>
                     </li>
                     <li>
                         <a href="user_order.html">My Order</a>
@@ -66,7 +67,7 @@
                         <a href="#">My Credit</a>
                     </li>
                 </ul>
-                <h3 class="text_size_fix">
+                <h3 id="logout_btn" class="text_size_fix">
                     <a href="#">
                         <i class="fa-solid fa-right-from-bracket"></i>
                         Logout
@@ -147,6 +148,8 @@
                  </div>
             </div>
          </div>
+    </div>
+    <div id="hp13">
     </div>   
 </body>
 </html>
