--- a/homePage.html
+++ b/homePage.html
@@ -13,18 +13,18 @@
     </div>
 
     <div class="hp" id="hp2">
-        <button class="left">&#60;</button>
-        <img src="https://www.reliancedigital.in/medias/Audio-Accessories-Carousel-Banner-08-07-2022.jpg?context=bWFzdGVyfGltYWdlc3w2NjIyMXxpbWFnZS9qcGVnfGltYWdlcy9oNDAvaGRkLzk4NjE0OTk4MTM5MTguanBnfDFjY2I2NTI0NGJhYWM3Yjk0MDgxNWJjZjg1NGVlZjJjYzQ3N2E5M2ZmY2Y4MjdjMGEwNjgyZDU1YjgzYzkwNjI" alt="Image">
-        <button class="right">&#62;</button>
+        <!-- <button id="hp2btnl" class="left">&#60;</button> -->
+        <img id="hp2img" src="https://www.reliancedigital.in/medias/Audio-Accessories-Carousel-Banner-08-07-2022.jpg?context=bWFzdGVyfGltYWdlc3w2NjIyMXxpbWFnZS9qcGVnfGltYWdlcy9oNDAvaGRkLzk4NjE0OTk4MTM5MTguanBnfDFjY2I2NTI0NGJhYWM3Yjk0MDgxNWJjZjg1NGVlZjJjYzQ3N2E5M2ZmY2Y4MjdjMGEwNjgyZDU1YjgzYzkwNjI" alt="Image">
+        <!-- <button id="hp2btnr" class="right">&#62;</button> -->
     </div>
     
     <div class="hp" id="hp3">
         <div class="hp3L">
-            <button class="btnLeft">&#60;</button>
+            <button id="hp3btnLeft" class="btnLeft">&#60;</button>
         </div>
         <div class="mid">
             <h3>BEST DEALS ON LATEST LAPTOPS | <a href="">VIEW ALL</a></h3>
-            <div class="components">
+            <div id="hp3components" class="components">
                 <a href="">
                     <div class="product">
                         <div class="box1">
@@ -98,16 +98,16 @@
             </div>
         </div>
         <div class="hp3R">
-            <button class="btnRight">&#62;</button>
+            <button id="hp3btnRight" class="btnRight">&#62;</button>
         </div>
     </div>
     <div class="hp" id="hp4">
         <div class="hp4L">
-            <button class="btnLeft">&#60;</button>
+            <button id="hp4btnLeft" class="btnLeft">&#60;</button>
         </div>
         <div class="mid">
             <h3>LOWEST PRICES ON SMALL APPLIANCES | <a href="">VIEW ALL</a></h3>
-            <div class="components">
+            <div id="hp4components" class="components">
                 <a href="">
                     <div class="product">
                         <div class="box1">
@@ -181,7 +181,7 @@
             </div>
         </div>
         <div class="hp4R">
-            <button class="btnRight">&#62;</button>
+            <button id="hp4btnRight" class="btnRight">&#62;</button>
         </div>
     </div>
     <div class="hp" id="hp5">
@@ -207,9 +207,9 @@
         </div>
     </div>
     <div class="hp" id="hp7">
-        <button class="left">&#60;</button>
-        <img src="https://www.reliancedigital.in/medias/OnePlus-10T-5G-NPI-Banner-22-07-2022.jpg?context=bWFzdGVyfGltYWdlc3w3Mjk2N3xpbWFnZS9qcGVnfGltYWdlcy9oZDcvaDExLzk4NjcyNzk5OTA4MTQuanBnfDMyZjg5NmYwZWUzOTVkYzM3ZDEyZGM1NjBjNTZkN2JlY2NlMDc0ZmZmMGVlYzFlMTdmZTJiMWFhZGYwNGZiN2I" alt="Image">
-        <button class="right">&#62;</button>
+        <!-- <button class="left">&#60;</button> -->
+        <img id="hp7img" src="https://www.reliancedigital.in/medias/OnePlus-10T-5G-NPI-Banner-22-07-2022.jpg?context=bWFzdGVyfGltYWdlc3w3Mjk2N3xpbWFnZS9qcGVnfGltYWdlcy9oZDcvaDExLzk4NjcyNzk5OTA4MTQuanBnfDMyZjg5NmYwZWUzOTVkYzM3ZDEyZGM1NjBjNTZkN2JlY2NlMDc0ZmZmMGVlYzFlMTdmZTJiMWFhZGYwNGZiN2I" alt="Image">
+        <!-- <button class="right">&#62;</button> -->
     </div>
     <div class="hp" id="hp8">
         <div class="head">
@@ -495,70 +495,8 @@
         </div>
     </div>
     <div class="hp" id="hp13">
-        <div class="first">
-            <div class="info">
-                <h3>PRODUCT CATEGORIES</h3>
-                <p>Smatphones</p>
-                <p>Laptops</p>
-                <p>DSLR Cameras</p>
-                <p>Televisions</p>
-                <p>Air Conditioners</p>
-                <p>Refrigerators</p>
-                <p>Kitchen Appliances</p>
-                <p>Accessories</p>
-                <p>Personal Care & Grooming</p>
-            </div>
-            <div class="info">
-                <h3>SITE INFO</h3>
-                <p>About Reliance Digital</p>
-                <p>resQ Services</p>
-                <p>Site Map</p>
-                <p>Gift Cards</p>
-                <p>Corporate Enquires</p>
-                <p>Contact Us</p>
-            </div>
-            <div class="info">
-                <h3>RESOURCE CENTRE</h3>
-                <p>Product Reviews</p>
-                <p>Buying Guides</p>
-                <p>How Tos</p>
-                <p>Featured Stories</p>
-                <p>Events & Happenings</p>
-            </div>
-            <div class="info">
-                <h3>POLOCIES</h3>
-                <p>Terms of Use</p>
-                <p>FAQs</p>
-                <p>Cancellation and Return Policy</p>
-                <p>Pricing and Payments Policy</p>
-                <p>Shipping and Delivery Policy</p>
-                <p>Privacy Policy</p>
-                <p>E-waste Policy</p>
-                <p>EMI and Additional Cashback T&C</p>
-                <p>RelianceOne Loyalty Program T&C</p>
-                <p>Caution Notice</p>
-            </div>
-        </div>
-        <div class="second">
-            <div class="one">
-                <h3>FOLLOW US</h3>
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-            </div>
-            <div class="two">
-                <h3>EXPERIENCE RELIANCE DIGITAL APP ON MOBILE</h3>
-                <img src="" alt="">
-                <img src="" alt="">
-            </div>
-        </div>
-        <div class="third">
-            <h3>Disclaimer</h3>
-            <p>Product prices, offers and availability are subject to change from time to time. All prices are inclusive of taxes. Product colours & images are only for illustration and they may not exactly match with the actual product. Product specs are subject to change & may vary from actual product. While every care is taken to avoid inaccuracies in content, these are provided as is, without warranty of any kind.</p>
-        </div>
-        <div class="forth">
-            <h3> © 2022 Reliance Digital. All Rights Reserved.</h3>
-        </div>
+        
     </div>
 </body>
 </html>
+<script type="module" src="homePage.js"></script>
