--- a/TelevisionAllDetails/telDetails.html
+++ b/TelevisionAllDetails/telDetails.html
@@ -47,21 +47,30 @@
                     <h4>Got Feedback to share on this page? <span>report here.</span></h4>
                 </div>
                 <div id="price">
-                    <p>Deal Price:</p>
-                    <p>Offer Price:</p>
-                    <p>MRP:</p>
+                    <div class="flex3">
+                        <p id="priceDeal">Deal Price:</p>
+                        <p id="deal"></p>
+                    </div>
+                    <div class="flex3">
+                        <p>Offer Price:</p>
+                        <p id="offer"></p>
+                    </div>
+                    <div class="flex3">
+                        <p>MRP:</p>
+                        <p id="mrp"></p>
+                    </div>
                     <p class="save">You Save: 25%(₹9,910)</p>
                     <p>EMIs (Credit Cards) from ₹1391.89/month | <span>View Plans</span></p>
                     <h4>Free Shipping!</h4>
-                </div>
-                <div>
-                    <div id="displayPincode">
-                        <input type="number" maxlength="6" >
-                        <label for="">Pin Code</label>
-                    </div>
-                    <div id="cartBuy">
-                        <div id="addToCartCamDetail">ADD TO CART</div>
-                        <div id="buyNowCamDetail">BUY NOW</div>
+                    <div>
+                        <div id="displayPincode">
+                            <input type="number" maxlength="6" >
+                            <label for="">PIN Code</label>
+                        </div>
+                        <div id="cartBuy">
+                            <div id="addToCartDetail">ADD TO CART</div>
+                            <div id="buyNowDetail">BUY NOW</div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -69,4 +78,4 @@
     </div>
 </body>
 </html>
-<script src=""></script>
+<script src="./telScript.js"></script>
