--- a/homePage.html
+++ b/homePage.html
@@ -280,11 +280,11 @@
     </div>
     <div class="hp" id="hp10">
         <div class="hp3L">
-            <button class="btnLeft">&#60;</button>
+            <button id="hp10btnLeft" class="btnLeft">&#60;</button>
         </div>
         <div class="mid">
             <h3>SMARTWATCHES AT NEVER BEFORE PRICES | <a href="">VIEW ALL</a></h3>
-            <div class="components">
+            <div id="hp10components" class="components">
                 <a href="">
                     <img src="https://www.reliancedigital.in/medias/Smartwatches-at-NEVER-before-prices.jpg?context=bWFzdGVyfGltYWdlc3w5NjczNHxpbWFnZS9qcGVnfGltYWdlcy9oYmYvaGZiLzk4NjAwNjU5NTE3NzQuanBnfGMwMmUwNTdhMzY1NDBmNjk3ZWJiZmNiMTBkZGRhOGZjNTYxNjgxMTQ4YjllYjhjYjRiZTAxYTU5MWUyMWNiZWE" alt="">
                 </a>
@@ -347,20 +347,20 @@
             </div>
         </div>
         <div class="hp3R">
-            <button class="btnRight">&#62;</button>
+            <button id="hp10btnRight" class="btnRight">&#62;</button>
         </div>
     </div>
     <div class="hp" id="hp11">
-        <div class="hp3L">
+        <div id="hp11btnLeft" class="hp3L">
             <button class="btnLeft">&#60;</button>
         </div>
         <div class="mid">
             <h3>BEST SELLING SOUNDBARS | <a href="">VIEW ALL</a></h3>
-            <div class="components">
+            <div id="hp11components" class="components">
                 <a href="">
                     <div class="product">
                         <div class="box1">
-                            <img src="https://www.reliancedigital.in/medias/Lenovo-41IN-Laptops-492850143-i-1-1200Wx1200H-300Wx300H?context=bWFzdGVyfGltYWdlc3w2NzU3MXxpbWFnZS9qcGVnfGltYWdlcy9oNzQvaGVkLzk4NDkyMzgzMjMyMzAuanBnfDA0NWNmNjdiOWE2ZjAyMDBhZjNjNWVhNThjNmJlYmE3MDc1NTc4MWU1MGJjZjgzYTNlYzBjYWVlOGI5NTZmY2Y" alt="Image">
+                            <img src="https://www.reliancedigital.in/medias/Best-Selling-Soundbars-Products-Carousel-Banner-30-06-2022.jpg?context=bWFzdGVyfGltYWdlc3w1MDA1OHxpbWFnZS9qcGVnfGltYWdlcy9oZmYvaDBkLzk4NTc5NzI4OTU3NzQuanBnfGZmYTM1ZDMzNGU5YTY3NzA1NWJiNWE1OTA4MTU5MjIyMTRjNWY1MTA4ZmQxNGM5NGNhMzU2YjUyMzE4Y2QzNWI" alt="Image">
                         </div>
                         <div class="box2">
                             <p class="proName">Lenovo 7KIN IdeaPad Slim 3i Laptop (Intel Celeron N4020/4GB/256GB/ Windows 11/MSO/HD), 35.56 cm (14 inch)</p>
@@ -419,23 +419,23 @@
             </div>
         </div>
         <div class="hp3R">
-            <button class="btnRight">&#62;</button>
+            <button id="hp11btnRight" class="btnRight">&#62;</button>
         </div>
     </div>
     <div class="hp" id="hp12">
         <div class="hp3L">
-            <button class="btnLeft">&#60;</button>
+            <button id="hp12btnLeft" class="btnLeft">&#60;</button>
         </div>
         <div class="mid">
-            <h3>TABLETS | <a href="">VIEW ALL</a></h3>
-            <div class="components">
+            <h3>TOP SELLERS FROM TCL & IFFALCON | <a href="">VIEW ALL</a></h3>
+            <div id="hp12components" class="components">
                 <a href="">
-                    <img src="https://www.reliancedigital.in/medias/Tablets.jpg?context=bWFzdGVyfGltYWdlc3w1NDUyNHxpbWFnZS9qcGVnfGltYWdlcy9oYTgvaGRiLzk4NjIyMDgwOTQyMzguanBnfDJkYTA3NzA1YWUxZmNiMGY0N2EzZjBjOTlkMTNiYzlkNjM5NjAxN2YzMWRjNjA3MjljNDExYzg3OGU1OTJhM2Y" alt="">
+                    <img src="https://www.reliancedigital.in/medias/Top-seller-from-TCL-IFFALCON.jpg?context=bWFzdGVyfGltYWdlc3wxNTY1NTl8aW1hZ2UvanBlZ3xpbWFnZXMvaGMyL2hmNS85ODU5NzA0Njg0NTc0LmpwZ3w5ZTg5YzdmNDlkZTAzY2YyZjY1NzY4NzA3MGFjMzJlZTkyNTIyZGJmY2U0NjMxN2E3NWVkODM3NTI0ZDIzYWI1" alt="">
                 </a>
                 <a href="">
                     <div class="product">
                         <div class="box1">
-                            <img src="https://www.reliancedigital.in/medias/Lenovo-41IN-Laptops-492850143-i-1-1200Wx1200H-300Wx300H?context=bWFzdGVyfGltYWdlc3w2NzU3MXxpbWFnZS9qcGVnfGltYWdlcy9oNzQvaGVkLzk4NDkyMzgzMjMyMzAuanBnfDA0NWNmNjdiOWE2ZjAyMDBhZjNjNWVhNThjNmJlYmE3MDc1NTc4MWU1MGJjZjgzYTNlYzBjYWVlOGI5NTZmY2Y" alt="Image">
+                            <img src="https://www.reliancedigital.in/medias/Top-seller-from-TCL-IFFALCON.jpg?context=bWFzdGVyfGltYWdlc3wxNTY1NTl8aW1hZ2UvanBlZ3xpbWFnZXMvaGMyL2hmNS85ODU5NzA0Njg0NTc0LmpwZ3w5ZTg5YzdmNDlkZTAzY2YyZjY1NzY4NzA3MGFjMzJlZTkyNTIyZGJmY2U0NjMxN2E3NWVkODM3NTI0ZDIzYWI1" alt="Image">
                         </div>
                         <div class="box2">
                             <p class="proName">Lenovo 7KIN IdeaPad Slim 3i Laptop (Intel Celeron N4020/4GB/256GB/ Windows 11/MSO/HD), 35.56 cm (14 inch)</p>
@@ -491,7 +491,7 @@
             </div>
         </div>
         <div class="hp3R">
-            <button class="btnRight">&#62;</button>
+            <button id="hp12btnRight" class="btnRight">&#62;</button>
         </div>
     </div>
     <div class="hp" id="hp13">
