--- a/pages/homePage.html
+++ b/pages/homePage.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inline Electronics Shopping Store in India</title>
-    <link rel="stylesheet" href="homePage.css">
+    <link rel="stylesheet" href="../CSS/homePage.css">
 </head>
 <body>
     <div class="hp" id="hp1">
@@ -499,4 +499,4 @@
     </div>
 </body>
 </html>
-<script type="module" src="homePage.js"></script>
+<script type="module" src="../scripts/homePage.js"></script>
