--- a/pages/homePage.html
+++ b/pages/homePage.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inline Electronics Shopping Store in India</title>
+    <title>Online Electronics Shopping Store in India</title>
+    <link rel="icon" type="image/x-icon" href="https://www.reliancedigital.in//build/client/images/apple-touch-icon.png">
+    <script src="https://kit.fontawesome.com/eaafce657d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../CSS/homePage.css">
+    <link rel="stylesheet" href="../CSS/footer.css">
+    <link rel="stylesheet" href="../CSS/homePage.css">
+    <link rel="stylesheet" href="../CSS/navbaar.css">
 </head>
 <body>
+    <div id="top_find_store_div"></div>
+    <div id="navbaar_div"></div>
     <div class="hp" id="hp1">
         <img src="https://www.reliancedigital.in/medias/Boot-Up-Carousel-Banner-29-07-2022.jpg?context=bWFzdGVyfGltYWdlc3wxMjIxOTd8aW1hZ2UvanBlZ3xpbWFnZXMvaGY0L2g2ZC85ODY4MDAwMTk4Njg2LmpwZ3xiN2ExZWQ3ZDNmM2U3OGMyNTJmYTVmNjUzMTQ3NDcyYzY3ZTJkYWZlMTBjMjdlN2UyY2Y0YjM2MzBlZWYyNWMw" alt="Image">
     </div>
@@ -500,3 +507,4 @@
 </body>
 </html>
 <script type="module" src="../scripts/homePage.js"></script>
+<script type="module" src="../scripts/header.js"></script>
