--- a/pages/telDetails.html
+++ b/pages/telDetails.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./telDetails.css">
+    <link rel="stylesheet" href="../CSS/telDetails.css">
 </head>
 <body>
     <div class="flex1">
@@ -78,4 +78,4 @@
     </div>
 </body>
 </html>
-<script src="./telScript.js"></script>
+<script src="../scripts/telScript.js"></script>
