--- a/pages/telLandpage.html
+++ b/pages/telLandpage.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link rel="stylesheet" href="./telLandpage.css">
+    <link rel="stylesheet" href="../CSS/telLandpage.css">
 </head>
 <body>
     <div id="slideshow"></div>
@@ -474,4 +474,4 @@
       </div>
 </body>
 </html>
-<script src="./telLandingpage.js"></script>
+<script src="../scripts/telLandingpage.js"></script>
