--- a/pages/telDetails.html
+++ b/pages/telDetails.html
@@ -78,4 +78,4 @@
     </div>
 </body>
 </html>
-<script src="../scripts/telScript.js"></script>
+<script src="../scripts/telScript.js" type="module"></script>
