--- a/pages/homePage.html
+++ b/pages/homePage.html
@@ -7,10 +7,9 @@
     <title>Online Electronics Shopping Store in India</title>
     <link rel="icon" type="image/x-icon" href="https://www.reliancedigital.in//build/client/images/apple-touch-icon.png">
     <script src="https://kit.fontawesome.com/eaafce657d.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../CSS/homePage.css">
     <link rel="stylesheet" href="../CSS/footer.css">
-    <link rel="stylesheet" href="../CSS/homePage.css">
     <link rel="stylesheet" href="../CSS/navbaar.css">
+    <link rel="stylesheet" href="../CSS/homePage.css">
 </head>
 <body>
     <div id="top_find_store_div"></div>
@@ -501,9 +500,9 @@
             <button id="hp12btnRight" class="btnRight">&#62;</button>
         </div>
     </div>
-    <div class="hp" id="hp13">
-        
-    </div>
+
+    <!-- <----footer---->
+    <div class="hp" id="hp13"> </div>
 </body>
 </html>
 <script type="module" src="../scripts/homePage.js"></script>
