--- a/pages/telDetails.html
+++ b/pages/telDetails.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>tek_details</title>
+    <link rel="icon" type="image/x-icon" href="https://www.reliancedigital.in//build/client/images/apple-touch-icon.png">
+    <script src="https://kit.fontawesome.com/eaafce657d.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../CSS/footer.css">
+    <link rel="stylesheet" href="../CSS/navbaar.css">
     <link rel="stylesheet" href="../CSS/telDetails.css">
 </head>
 <body>
+    <div id="top_find_store_div"></div>
+    <div id="navbaar_div"></div>
     <div class="flex1">
         <div class="left">
             <div id="bigImage"></div>
@@ -76,6 +82,8 @@
             </div>
         </div>
     </div>
+    <div class="hp" id="hp13"> </div>
 </body>
 </html>
 <script src="../scripts/telScript.js" type="module"></script>
+<script type="module" src="../scripts/header.js"></script>
