--- a/pages/telLandpage.html
+++ b/pages/telLandpage.html
@@ -4,17 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Television page</title>
+    <link rel="icon" type="image/x-icon" href="https://www.reliancedigital.in//build/client/images/apple-touch-icon.png">
+    <script src="https://kit.fontawesome.com/eaafce657d.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../CSS/footer.css">
+    <link rel="stylesheet" href="../CSS/navbaar.css">
     <link rel="stylesheet" href="../CSS/telLandpage.css">
 </head>
 <body>
+    <div id="top_find_store_div"></div>
+    <div id="navbaar_div"></div>
     <div id="slideshow"></div>
     <div class="merge">
         <div id="left">
             <div>
                 <div class="flex1">
                     <h1>SHOP BY PRICE</h1>
-                    <a href="">VIEW ALL</a>
+                    <a href="./televisionfilter.html">VIEW ALL</a>
                 </div>
                 <div class="flex2">
                     <div>
@@ -37,7 +43,7 @@
             <div>
                 <div class="flex1">
                     <h1>SHOP BY SEGMENT</h1>
-                    <a href="">VIEW ALL</a>
+                    <a href="./televisionfilter.html">VIEW ALL</a>
                 </div>
                 <div class="flex3">
                     <div>
@@ -54,7 +60,7 @@
             <div>
                 <div class="flex1">
                     <h1>SHOP BY BRAND</h1>
-                    <a href="">VIEW ALL</a>
+                    <a href="./televisionfilter.html">VIEW ALL</a>
                 </div>
                 <div class="flex4">
                     <div>
@@ -472,6 +478,8 @@
         <p class="all_infor_title1">Best Sellers in Tv</p>
         <p class="all_info_detail3">The boom of online shopping has brought us to buying electronics, home appliances, and even furniture on the web today.<b>TV online shopping </b>is like buying anything else on the internet, especially on a trusted platform like Reliance Digital. Explore the wide range of televisions from renowned brands like LG, Panasonic, Samsung, Sony, and more and buy<b> LED TV online</b> for your home and office with Reliance Digital. Check out the best sellers in TV:</p>
       </div>
+      <div class="hp" id="hp13"> </div>
 </body>
 </html>
-<script src="../scripts/telLandingpage.js"></script>
+<script src="../scripts/telLandingpage.js" type="module"></script>
+<script type="module" src="../scripts/header.js"></script>
