--- a/pages/televisionfilter.html
+++ b/pages/televisionfilter.html
@@ -7,10 +7,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Television</title>
   <link rel="Stylesheet" href="../CSS/televisionfilter.css" />
+  <link rel="icon" type="image/x-icon" href="https://www.reliancedigital.in//build/client/images/apple-touch-icon.png">
+  <script src="https://kit.fontawesome.com/eaafce657d.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/15.6.0/nouislider.min.css" integrity="sha512-qveKnGrvOChbSzAdtSs8p69eoLegyh+1hwOMbmpCViIwj7rn4oJjdmMvWOuyQlTOZgTlZA0N2PXA7iA8/2TUYA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="../CSS/navbaar.css">
+  <link rel="stylesheet" href="../CSS/footer.css">
 </head>
 
 <body>
+  <div id="top_find_store_div"></div>
+  <div id="navbaar_div"></div>
   <div id="television_part">
     <div class="tel_animation">
       <img src="" class="tel_img" />
@@ -428,9 +434,10 @@
       </div>
     </div>
   </div>
-
+  <div class="hp" id="hp13"> </div>
 </body>
 
 </html>
 <script src="../scripts/televisionfilter.js" type="module"></script>
+<script type="module" src="../scripts/header.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/15.6.0/nouislider.min.js" integrity="sha512-1mDhG//LAjM3pLXCJyaA+4c+h5qmMoTc7IuJyuNNPaakrWT9rVTxICK4tIizf7YwJsXgDC2JP74PGCc7qxLAHw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
