--- a/pages/login_signup.html
+++ b/pages/login_signup.html
@@ -50,8 +50,10 @@
              <input id="register_last_name" type="text" placeholder="Last Name">
              <label for="">Email Id</label>
              <input id="register_email" type="email" placeholder="Enter Your Email Id">
-             <label for="">Enter Your City</label>
+             <label for="">City</label>
              <input id="register_city_name" type="text" placeholder="City Name">
+             <label for="">Your Address</label>
+             <input id="register_add_name" type="text" placeholder="Enter Your Delevery Address">
              <label for="">Mobile Number</label>
              <input id="register_mobile" type="number" placeholder="Mobile Number">
              <label class="signupotp" for="">Enter OTP</label>
