--- a/pages/user_profile.html
+++ b/pages/user_profile.html
@@ -41,6 +41,9 @@
                  <p id="user_city_Details" class="text_size_fix">
                     City : Lucknow
                     </p>
+                 <p id="user_add_Details" class="text_size_fix">
+                    
+                 </p>   
             </div>
             <div class="userdetailLis">
                 <h3 class="text_size_fix">
