--- a/pages/telDetails.html
+++ b/pages/telDetails.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tek_details</title>
+    <title>Product_details</title>
     <link rel="icon" type="image/x-icon" href="https://www.reliancedigital.in//build/client/images/apple-touch-icon.png">
     <script src="https://kit.fontawesome.com/eaafce657d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../CSS/footer.css">
