--- a/pages/user_order.html
+++ b/pages/user_order.html
@@ -39,6 +39,9 @@
                  <p id="user_city_Details" class="text_size_fix">
                     City : Lucknow
                     </p>
+                    <p id="user_add_Details" class="text_size_fix">
+                    
+                    </p>
             </div>
             <div class="userdetailLis">
                 <h3 class="text_size_fix">
@@ -80,7 +83,7 @@
             <div id="user_order_grid">
                  <div id="NO_Oder_found">
                     <p>No Order Found</p>
-                    <a href="#">Continue Shopping...</a>
+                    <a href="homePage.html">Continue Shopping...</a>
                  </div>
             </div>
          </div>
