--- a/Pages/checkoutCart.html
+++ b/Pages/checkoutCart.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checkout Full Cart</title>
-    <link rel="stylesheet" href="../style/main.css">
+    <link rel="stylesheet" href="../CSS/main.css">
 </head>
 <body id="checkoutCartbody">
     <nav id="navMain">
@@ -47,4 +47,4 @@
     </footer>
 </body>
 </html>
-<script src="./checkoutCart.js" type="module"></script>
+<script src="../scripts/checkoutCart.js" type="module"></script>
