--- a/Pages/cart.html
+++ b/Pages/cart.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cart Page</title>
-    <link rel="stylesheet" href="../style/main.css">
+    <link rel="stylesheet" href="../CSS/main.css">
 
 </head>
 <body>
@@ -36,4 +36,4 @@
     
 </body>
 </html>
-<script src="cart.js" type="module"></script>
+<script src="../scripts/cart.js" type="module"></script>
