--- a/Pages/cart.html
+++ b/Pages/cart.html
@@ -5,12 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cart Page</title>
     <link rel="stylesheet" href="../CSS/main.css">
-
+    <link rel="icon" type="image/x-icon" href="https://www.reliancedigital.in//build/client/images/apple-touch-icon.png">
+    <script src="https://kit.fontawesome.com/eaafce657d.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../CSS/footer.css">
+    <link rel="stylesheet" href="../CSS/navbaar.css">
 </head>
 <body>
-    <nav id="navMain">
-        <!-- import navbar here  -->
-    </nav>
+    <div id="top_find_store_div"></div>
+    <div id="navbaar_div"></div>
+
     <div id="cartPageBody">
         <div id="listingDiv">
             <div id="totalInCart">
@@ -30,10 +33,10 @@
             <p>Safe and Secure Payments. Easy returns. 100% Authentic products.</p>
         </div>
     </div>
-    <footer id="footerMain">
-        <!-- import footer here -->
-    </footer>
+    <div id="hp13">
+    </div> 
     
 </body>
 </html>
 <script src="../scripts/cart.js" type="module"></script>
+<script type="module" src="../scripts/header.js"></script>
