--- a/Pages/checkoutCart.html
+++ b/Pages/checkoutCart.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checkout Full Cart</title>
     <link rel="stylesheet" href="../CSS/main.css">
+    <link rel="icon" type="image/x-icon" href="https://www.reliancedigital.in//build/client/images/apple-touch-icon.png">
+    <script src="https://kit.fontawesome.com/eaafce657d.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../CSS/footer.css">
+    <link rel="stylesheet" href="../CSS/navbaar.css">
 </head>
 <body id="checkoutCartbody">
-    <nav id="navMain">
-        <!-- import navbar here  -->
-    </nav>
+    <div id="top_find_store_div"></div>
+    <div id="navbaar_div"></div>
+
     <div id="checkoutPageBody">
         <div id="deliveryMethodBox">
             <h3 id="deliverMethods">DELIVERY METHOD</h3>
@@ -38,13 +42,14 @@
            </div>
         </div>
         <div id="paymentOptionDiv">
+            <!-- <div id="paySecurely">PAY SECURELY</div> -->
            <!--display payment options here -->
 
         </div>
     </div>
-    <footer id="footerMain">
-        <!-- import footer here -->
-    </footer>
+    <div id="hp13">
+    </div> 
 </body>
 </html>
 <script src="../scripts/checkoutCart.js" type="module"></script>
+<script type="module" src="../scripts/header.js"></script>
